--- a/sigi/app/Resources/views/user/edit.html.twig
+++ b/sigi/app/Resources/views/user/edit.html.twig
@@ -1,6 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
+
     <h1>Editar Usuario</h1>
 
     {{ form_start(edit_form) }}
@@ -64,6 +65,12 @@ function collapseJS()
     		$("#collapseStudent").collapse('hide');
     		$("#collapseMentor").collapse('hide');
     		$("#collapseOther").collapse('hide');
+
+			$("#collapseAdmin :input").attr("disabled", false);
+    		$("#collapseStudent :input").attr("disabled", true);
+    		$("#collapseMentor :input").attr("disabled", true);
+    		$("#collapseOther :input").attr("disabled", true);
+
     		beak;
 
 		case "ROLE_STUDENT":
@@ -71,6 +78,12 @@ function collapseJS()
     		$("#collapseStudent").collapse('show');
     		$("#collapseMentor").collapse('hide');
     		$("#collapseOther").collapse('hide');
+
+    		$("#collapseAdmin :input").attr("disabled", true);
+    		$("#collapseStudent :input").attr("disabled", false);
+    		$("#collapseMentor :input").attr("disabled", true);
+    		$("#collapseOther :input").attr("disabled", true);
+
     		beak;
 
 		case "ROLE_MENTOR":
@@ -78,6 +91,11 @@ function collapseJS()
     		$("#collapseStudent").collapse('hide');
     		$("#collapseMentor").collapse('show');
     		$("#collapseOther").collapse('hide');
+
+    		$("#collapseAdmin :input").attr("disabled", true);
+    		$("#collapseStudent :input").attr("disabled", true);
+    		$("#collapseMentor :input").attr("disabled", false);
+    		$("#collapseOther :input").attr("disabled", true);
     		beak;
 
 		case "ROLE_OTHER":
@@ -85,6 +103,12 @@ function collapseJS()
     		$("#collapseStudent").collapse('hide');
     		$("#collapseMentor").collapse('hide');
     		$("#collapseOther").collapse('show');
+
+    		$("#collapseAdmin :input").attr("disabled", true);
+    		$("#collapseStudent :input").attr("disabled", true);
+    		$("#collapseMentor :input").attr("disabled", true);
+    		$("#collapseOther :input").attr("disabled", false);
+
     		beak;
     	}
 }
