creacion de controller misc para cosas generales, y avance de trabajo con oportunidades, falta probar, push del dia

--- a/sigi/app/Resources/views/misc/listOportunities.html.twig
+++ b/sigi/app/Resources/views/misc/listOportunities.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Mis Oportunidades</h1>
+    <h1>Lista de Oportunidades</h1>
 
     <table class="table table-striped">
         <thead>
@@ -13,7 +13,6 @@
                 <th>Publica</th>
                 <th>Modalidad</th>
                 <th>Publicada</th>
-                <th></th>
                 <th></th>
             </tr>
         </thead>
@@ -28,12 +27,9 @@
                 <td>{{ oportunityResearch.modality }}</td>
                 <td>{% if oportunityResearch.publish %}Si{% else %}No{% endif %}</td>
                 <td><a href="{{ path('oportunityresearch_show', { 'id': oportunityResearch.id }) }}" class="btn btn-info btn-sm" role="button">Ver</a></td>
-                <td><a href="{{ path('oportunityresearch_edit', { 'id': oportunityResearch.id }) }}" class="btn btn-primary btn-sm" role="button">Editar</a></td>
             </tr>
         {% endfor %}
         </tbody>
     </table>
-
-    <a href="{{ path('oportunityresearch_new') }}" class="btn btn-primary btn-sm" role="button">Crear Nueva Oportunidad</a>
    
 {% endblock %}
