--- a/sigi/app/Resources/views/oportunityresearch/edit.html.twig
+++ b/sigi/app/Resources/views/oportunityresearch/edit.html.twig
@@ -1,5 +1,14 @@
 {% extends 'base.html.twig' %}
 
+{% block stylesheets %}
+    {{ parent() }}
+    
+
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.2-rc.1/css/select2.min.css" rel="stylesheet" />
+
+
+{% endblock %}
+
 {% block body %}
     <h1>Editar Oportunidad</h1>
 
@@ -40,6 +49,11 @@
 		    </div>
 		  </div>
 		</div>
+		</br>
+		{{ form_widget(keywordsForm) }}
+		</br>
+		</br>
+		
 
         <input type="submit" class="btn btn-primary btn1" role="button" value="Editar" />
     {{ form_end(edit_form) }}
@@ -48,4 +62,56 @@
     {{ form_start(delete_form) }}
         <input type="submit" value="Eliminar" class="btn btn-danger btn3" role="button">
     {{ form_end(delete_form) }}
+
+
+<script type="text/javascript">	
+
+window.onload = function() {
+	
+ 	$(".js-example-tokenizer").select2({
+  	tags: true,
+  	tokenSeparators: [',', ' ']
+})
+   var x = document.getElementsByClassName("select2-container");
+   x[0].style.width = "100%"
+
+	$('#secondary_mentor_secondaryMentor').on('change', function() {
+		var ter = document.getElementById("thertiary_mentor_thertiaryMentor");
+
+		if (ter.value == this.value)
+		{
+			var repeteadText = this.options[this.selectedIndex].text;
+
+  			alert( repeteadText + "Ya ha sido seleccionado, porfavor seleccione otro mentor" );
+  			this.selectedIndex = 0;
+		}
+	})
+
+	$('#thertiary_mentor_thertiaryMentor').on('change', function() {
+		var ter = document.getElementById("secondary_mentor_secondaryMentor");
+
+		if (ter.value == this.value)
+		{
+			var repeteadText = this.options[this.selectedIndex].text;
+
+  			alert( repeteadText + "Ya ha sido seleccionado, porfavor seleccione otro mentor" );
+  			this.selectedIndex = 0;
+		}
+	})
+
+	$('#oportunity_research_oportunityKeywords').on('change', function() {
+		
+  		alert( $('#oportunity_research_oportunityKeywords').val() );
+	})
+};
+
+</script>
+
+{% endblock %}
+
+{% block javascripts %}
+    {{ parent() }}
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.2-rc.1/js/select2.min.js"></script>
+        
 {% endblock %}
