--- a/sigi/app/Resources/views/oportunityresearch/new.html.twig
+++ b/sigi/app/Resources/views/oportunityresearch/new.html.twig
@@ -2,18 +2,23 @@
 
 {% block stylesheets %}
     {{ parent() }}
-    <link href="{{ asset('css/bootstrap-tag-cloud.css') }}" rel="stylesheet"/>
+    
+
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.2-rc.1/css/select2.min.css" rel="stylesheet" />
+
+
 {% endblock %}
 
 
 {% block body %}
 	
+
+	
     <h1>Nueva Oportunidad</h1>
+
 
     {{ form_start(form) }}
         {{ form_widget(form) }}
-
-        <ul class="oportunityKeywords" data-prototype="{{ form_widget(form.oportunityKeywords.vars.prototype)|e }}">
 
 		</ul>
 
@@ -52,11 +57,6 @@
 		  </div>
 		</div>
 
-		<div id="tag-success" class="input-append">
-		  <input type="text">
-		  <button class="btn btn-success" id="addKeyword" type="button">Agregar <i class="icon-plus"></i></button>
-		</div>
-		<ul id="tag-cloud"></ul>
 
 
         <input type="submit" class="btn btn-primary btn1" role="button" value="Crear" />
@@ -65,14 +65,50 @@
  
     <a href="{{ path('oportunityresearch_index') }}" class="btn btn-info btn2" role="button">Lista de Oportunidades</a>
 
-    <script>
-    
+<script type="text/javascript">
+
+window.onload = function() {
+	
+ 	$(".js-example-tokenizer").select2({
+  	tags: true,
+  	tokenSeparators: [',', ' ']
+})
+   var x = document.getElementsByClassName("select2-container");
+   x[0].style.width = "100%"
+
+	$('#secondary_mentor_secondaryMentor').on('change', function() {
+		var ter = document.getElementById("thertiary_mentor_thertiaryMentor");
+
+		if (ter.value == this.value)
+		{
+			var repeteadText = this.options[this.selectedIndex].text;
+
+  			alert( repeteadText + "Ya ha sido seleccionado, porfavor seleccione otro mentor" );
+  			this.selectedIndex = 0;
+		}
+	})
+
+	$('#thertiary_mentor_thertiaryMentor').on('change', function() {
+		var ter = document.getElementById("secondary_mentor_secondaryMentor");
+
+		if (ter.value == this.value)
+		{
+			var repeteadText = this.options[this.selectedIndex].text;
+
+  			alert( repeteadText + "Ya ha sido seleccionado, porfavor seleccione otro mentor" );
+  			this.selectedIndex = 0;
+		}
+	})
+};
+
 </script>
-   
+
+
 {% endblock %}
 
 {% block javascripts %}
     {{ parent() }}
 
-    <script src="{{ asset('js/bootstrap-tag-cloud.	js') }}"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.2-rc.1/js/select2.min.js"></script>
+        
 {% endblock %}
