--- a/sigi/app/Resources/views/oportunityresearch/new.html.twig
+++ b/sigi/app/Resources/views/oportunityresearch/new.html.twig
@@ -71,7 +71,7 @@ window.onload = function() {
 	
  	$(".js-example-tokenizer").select2({
   	tags: true,
-  	tokenSeparators: [',', ' ']
+  	tokenSeparators: [',']
 })
    var x = document.getElementsByClassName("select2-container");
    x[0].style.width = "100%"
