--- a/sigi/app/Resources/views/requirement/show.html.twig
+++ b/sigi/app/Resources/views/requirement/show.html.twig
@@ -15,7 +15,7 @@
             </tr>
             <tr>
                 <th>Tipo:</th>
-                <td>{{ requirement.type }}</td>
+                <td>{{ requirement.getTextType() }}</td>
             </tr>
             <tr>
                 <th>Funcion:</th>
