--- a/sigi/app/Resources/views/oportunityresearch/edit.html.twig
+++ b/sigi/app/Resources/views/oportunityresearch/edit.html.twig
@@ -69,17 +69,32 @@
 window.onload = function() {
 
 	$.fn.select2.defaults.defaults['language'].inputTooLong = function(){
-  		return 'Tag demasiado largo, maximo largo es de 20 caracteres'
+  		return 'Input demasiado largo.';
 	};
-	
+
+
  	$(".js-example-tokenizer").select2({
   	tags: true,
   	tokenSeparators: [','],
-  	maximumInputLength: 20
+  	maximumInputLength: 20,
+  	casesensitive: false,
+})
+
+ 	$(".js-tokenizer").select2({
+  	tags: true,
+  	tokenSeparators: [','],
+  	maximumInputLength: 10,
+  	casesensitive: false,
+  	createTag: function(params) {
+        var term = $.trim(params.term);
+
+        return {id: term.toUpperCase(), text: term.toUpperCase()};
+      }
 })
 
    var x = document.getElementsByClassName("select2-container");
-   x[0].style.width = "100%"
+   x[0].style.width = "100%";
+   x[1].style.width = "100%";
 
 	$('#secondary_mentor_secondaryMentor').on('change', function() {
 		var ter = document.getElementById("thertiary_mentor_thertiaryMentor");
