--- a/sigi/app/Resources/views/misc/listOportunities.html.twig
+++ b/sigi/app/Resources/views/misc/listOportunities.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Lista de Opfdsfasdortunidades</h1>
+    <h1>Lista de Oportunidades</h1>
 
     <table class="table table-striped">
         <thead>
