--- a/sigi/app/Resources/views/base.html.twig
+++ b/sigi/app/Resources/views/base.html.twig
@@ -61,8 +61,9 @@
                         <ul class="dropdown-menu">
                           {% if is_granted('ROLE_MENTOR') %}
                             <li><a href="{{path('oportunityresearch_new')}}">Crear Nueva</a></li>
+                            <li><a href="{{path('oportunityresearch_index')}}">Mis Oportunidades</a></li>
                           {% endif %}
-                          <li><a href="{{path('oportunityresearch_index')}}">Ver Listado</a></li>
+                            <li><a href="{{path('listOportunities')}}">Ver Listado</a></li>
                         </ul>
                       </li>
                     {% endif %}
