--- a/sigi/app/Resources/views/application/new.html.twig
+++ b/sigi/app/Resources/views/application/new.html.twig
@@ -1,7 +1,12 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Aplicar</h1>
+    <h2>Resumen Aplicación a Oportunidad de Investigación</h2>
+
+    <label>Alumno:</label> 
+    <input type="email" class="form-control" value="{{ students_name}}" readonly="true">
+    <label>Oportunidad:</label> 
+    <input type="email" class="form-control" value="{{ oportunity_name}}" readonly="true">
 
     {{ form_start(form) }}
         {{ form_widget(form) }}
